--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/vite": "^4.1.5",
     "autoprefixer": "^10.4.21",
     "lottie-react": "^2.4.1",
     "postcss": "^8.5.3",
