--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/vite": "^4.1.5",
     "autoprefixer": "^10.4.21",
+    "disable-devtool": "^0.3.8",
     "lottie-react": "^2.4.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
