--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/vite": "^4.1.5",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
     "disable-devtool": "^0.3.8",
     "lottie-react": "^2.4.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
+    "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.5.3",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.5"
