--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/vite": "^4.1.5",
+    "@tanstack/react-query": "^5.77.2",
     "aes-js": "^3.1.2",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
