--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.5.3",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
