--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.1.0",
     "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.77.2",
     "aes-js": "^3.1.2",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "disable-devtool": "^0.3.8",
     "lottie-react": "^2.4.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.4",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.5.3",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
